--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,17 +11,18 @@ import { Image } from 'astro:assets';
     <link rel="icon" type="image/svg+xml" href="/iso.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>El Baul de AI</title>
+    <meta name="description" content="Las investigaciones mas importantes en el mundo de la Inteligencia Artificial facil y rapido." />
+    <title>AI Vault</title>
   </head>
   <body>
     <header>
       <aside>
 		<div class="top-section">
 			<Image src={mainText} alt="iso" width={200} />
-			<p>El Baúl de la IA es una pagina de agrupa las investigaciones mas importantes en el mundo de la Inteligencia Artificial.</p>
+			<p>El AI Vault es una pagina de agrupa las investigaciones mas importantes en el mundo de la Inteligencia Artificial.</p>
 		</div>
 		<div class="search-section">
-			<input type="text" placeholder="Buscar" />
+			<input type="text" placeholder="Buscar por titulo" />
 			
 		</div>
 	  </aside>
