--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -3,8 +3,20 @@
 body
     font-family: 'IBM Plex Mono', monospace
 
-input 
+input
     font-family: inherit
 
 p
     font-size: 12px
+
+.item
+    margin: 6px
+    border: 1px solid black
+    background-color: #f0f0f0
+
+
+    .description
+        padding: 4px
+
+    img
+        width: 100%
