--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -17,6 +17,25 @@ p
 
     .description
         padding: 4px
+        margin-bottom: 4px
+        font-size: 12px
 
     img
         width: 100%
+        height: 300px
+
+        &:hover 
+            filter: saturate(1)
+
+        &:focus
+            filter: saturate(1)
+        
+    .year
+        padding: 2px
+        background-color: black
+        color: white
+
+    .category
+        padding: 2px
+        background-color: #c6c6c6dd
+        margin-left: 2px
