--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -22,7 +22,9 @@ p
 
     img
         width: 100%
-        height: 300px
+        height: 350px
+        filter: saturate(0)
+        aspect-ratio: 1 / 1
 
         &:hover 
             filter: saturate(1)
@@ -39,3 +41,56 @@ p
         padding: 2px
         background-color: #c6c6c6dd
         margin-left: 2px
+
+@media only screen and (min-width: 422px)
+    body
+        display: flex
+
+    .items
+        max-width: 100%
+        display: grid
+        grid-template-columns: repeat(2, 1fr)
+
+    .item
+        width: 300px
+
+        img
+            width: 300px
+            height: 300px
+
+@media only screen and (min-width: 900px)
+    .items
+        margin: auto
+        grid-template-columns: repeat(3, 1fr)
+
+    .item
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+        max-width: 200px
+
+        img
+            max-width: 200px
+            height: 200px
+
+        .year
+            font-size: 12px
+
+        .category
+            font-size: 12px
+
+    header
+        display: flex
+        max-width: 100vw
+
+        aside
+            max-width: 200px
+
+
+@media only screen and (min-width: 1200px)
+    .items
+        grid-template-columns: repeat(4, 1fr)
+
+@media only screen and (min-width: 1400px)
+    .items
+        grid-template-columns: repeat(5, 1fr)
